manifiesto/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Proceso de Quimicos Esp y Dilox</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrado Ganado</fullName>
        </values>
        <values>
            <fullName>Cerrado Perdido</fullName>
        </values>
        <values>
            <fullName>Iniciada</fullName>
        </values>
        <values>
            <fullName>Negociación</fullName>
        </values>
        <values>
            <fullName>Trabajando</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Proceso de Resinas</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrado Ganado</fullName>
        </values>
        <values>
            <fullName>Cerrado Perdido</fullName>
        </values>
        <values>
            <fullName>En Análisis</fullName>
        </values>
        <values>
            <fullName>Iniciada</fullName>
        </values>
        <values>
            <fullName>Propuesta Entregada</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Proceso de Terminales Maritimos</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrado Ganado</fullName>
        </values>
        <values>
            <fullName>Cerrado Perdido</fullName>
        </values>
        <values>
            <fullName>Confirmación de Requerimiento</fullName>
        </values>
        <values>
            <fullName>Factibilidad Técnica</fullName>
        </values>
        <values>
            <fullName>Iniciada</fullName>
        </values>
        <values>
            <fullName>Propuesta y Negociación</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presupuesto confirmado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_Meses__c</fullName>
        <label>Cantidad de Meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Centro_Logistico__c</fullName>
        <description>Describe el centro logístico desde donde sale cotización</description>
        <inlineHelpText>Centro logístico desde donde sale la cotización</inlineHelpText>
        <label>Centro Logístico</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1031</fullName>
                </value>
                <value>
                    <fullName>1034</fullName>
                </value>
                <value>
                    <fullName>1041</fullName>
                </value>
                <value>
                    <fullName>1050</fullName>
                </value>
                <value>
                    <fullName>1051</fullName>
                </value>
                <value>
                    <fullName>1061</fullName>
                </value>
                <value>
                    <fullName>1062</fullName>
                </value>
                <value>
                    <fullName>1064</fullName>
                </value>
                <value>
                    <fullName>1071</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2061</fullName>
                </value>
                <value>
                    <fullName>2071</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciudad_de_Entrega__c</fullName>
        <label>Ciudad de Entrega</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentarios_sobre_razon_de_perdida__c</fullName>
        <label>Comentarios sobre razón de pérdida</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comuna_de_Entrega__c</fullName>
        <label>Comuna de Entrega</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condicion_de_venta__c</fullName>
        <label>Condición de venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entregado en cliente</fullName>
                </value>
                <value>
                    <fullName>Puesto oficina</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>EX-WORK</fullName>
                </value>
                <value>
                    <fullName>CFR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contrato_Creado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contrato Creado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direccion_de_Entrega__c</fullName>
        <inlineHelpText>Indica la calle y número de entrega</inlineHelpText>
        <label>Dirección de Entrega</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descubrimiento completo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Razón de pérdida</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                    <label>Perdido por la competencia</label>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                    <label>Sin presupuesto</label>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                    <label>Sin decisión / No responde</label>
                </value>
                <value>
                    <fullName>Price</fullName>
                    <label>Precio</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Otro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N_mero_de_Oportunidad__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>N_mero_de_Oportunidad__c</inlineHelpText>
        <label>Número de Oportunidad</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Pais_de_Entrega__c</fullName>
        <label>País de Entrega</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Análisis de ROI completado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_de_Entrega__c</fullName>
        <label>Región de Entrega</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Región de Arica y Parinacota</fullName>
                </value>
                <value>
                    <fullName>Región de Tarapacá</fullName>
                </value>
                <value>
                    <fullName>Región de Antofagasta</fullName>
                </value>
                <value>
                    <fullName>Región de Atacama</fullName>
                </value>
                <value>
                    <fullName>Región de Coquimbo</fullName>
                </value>
                <value>
                    <fullName>Región de Valparaíso</fullName>
                </value>
                <value>
                    <fullName>Región Metropolitana de Santiago</fullName>
                </value>
                <value>
                    <fullName>Región del Libertador General Bernardo O’Higgins</fullName>
                </value>
                <value>
                    <fullName>Región del Maule</fullName>
                </value>
                <value>
                    <fullName>Región del Ñuble</fullName>
                </value>
                <value>
                    <fullName>Región del Biobío</fullName>
                </value>
                <value>
                    <fullName>Región de La Araucanía</fullName>
                </value>
                <value>
                    <fullName>Región de Los Ríos</fullName>
                </value>
                <value>
                    <fullName>Región de Los Lagos</fullName>
                </value>
                <value>
                    <fullName>Región de Aysén del General Carlos Ibáñez del Campo</fullName>
                </value>
                <value>
                    <fullName>Región de Magallanes y la Antártica Chilena</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Categoria__c</fullName>
        <label>Sub Categoría</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adhesivos</fullName>
                </value>
                <value>
                    <fullName>Aguas de Piscina</fullName>
                </value>
                <value>
                    <fullName>Aguas Industriales y Potabilización</fullName>
                </value>
                <value>
                    <fullName>Cosmética</fullName>
                </value>
                <value>
                    <fullName>Detergentes y Limpieza</fullName>
                </value>
                <value>
                    <fullName>Farmacéutica</fullName>
                </value>
                <value>
                    <fullName>Industria Alimenticia</fullName>
                </value>
                <value>
                    <fullName>Nutrición Animal</fullName>
                </value>
                <value>
                    <fullName>Otras Industrias</fullName>
                </value>
                <value>
                    <fullName>Poliuretanos Flexibles</fullName>
                </value>
                <value>
                    <fullName>Pesquera y Acuícola</fullName>
                </value>
                <value>
                    <fullName>Pinturas y Recubrimiento</fullName>
                </value>
                <value>
                    <fullName>Plásticos</fullName>
                </value>
                <value>
                    <fullName>Tintas y Procesos de Impresión</fullName>
                </value>
                <value>
                    <fullName>Colectores de Flotación</fullName>
                </value>
                <value>
                    <fullName>Electro Obtención</fullName>
                </value>
                <value>
                    <fullName>Extracción por Solvente</fullName>
                </value>
                <value>
                    <fullName>Floculantes</fullName>
                </value>
                <value>
                    <fullName>Minería de Oro y Plata</fullName>
                </value>
                <value>
                    <fullName>Productos para la producción de Agua desalada, Industrial, Potabilización y Saneamiento</fullName>
                </value>
                <value>
                    <fullName>Químicos Industriales</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Impregnación de Recubrimientos y Papeles</fullName>
                </value>
                <value>
                    <fullName>Madera Dimensionada</fullName>
                </value>
                <value>
                    <fullName>Moldes Fundición</fullName>
                </value>
                <value>
                    <fullName>Tableros Contrachapados</fullName>
                </value>
                <value>
                    <fullName>Tableros MDF</fullName>
                </value>
                <value>
                    <fullName>Tableros OSB</fullName>
                </value>
                <value>
                    <fullName>Tableros de Partículas</fullName>
                </value>
                <value>
                    <fullName>Vigas Laminadas de Madera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Negocio__c</fullName>
        <label>Tipo de Negocio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nacional</fullName>
                </value>
                <value>
                    <fullName>Exportación</fullName>
                </value>
                <value>
                    <fullName>Trading</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Servicio__c</fullName>
        <label>Tipo de Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Almacenaje</fullName>
                </value>
                <value>
                    <fullName>Muellaje</fullName>
                </value>
                <value>
                    <fullName>Transferencia</fullName>
                </value>
                <value>
                    <fullName>Limpieza de TK</fullName>
                </value>
                <value>
                    <fullName>Muellaje a la carga</fullName>
                </value>
                <value>
                    <fullName>Servicio Administrativo</fullName>
                </value>
                <value>
                    <fullName>Agua Fresca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unidad_de_Negocios__c</fullName>
        <label>Unidad de Negocios</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Químicos</fullName>
                </value>
                <value>
                    <fullName>Minería</fullName>
                </value>
                <value>
                    <fullName>Plásticos</fullName>
                </value>
                <value>
                    <fullName>Escuadrón</fullName>
                </value>
                <value>
                    <fullName>Quintero</fullName>
                </value>
                <value>
                    <fullName>Resinas</fullName>
                </value>
                <value>
                    <fullName>Mejillones</fullName>
                </value>
                <value>
                    <fullName>Dilox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>DILOX</fullName>
        <active>true</active>
        <businessProcess>Proceso de Quimicos Esp y Dilox</businessProcess>
        <label>DILOX</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quimicos_y_Especialidades</fullName>
        <active>true</active>
        <businessProcess>Proceso de Quimicos Esp y Dilox</businessProcess>
        <label>Químicos y Especialidades</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resinas</fullName>
        <active>true</active>
        <businessProcess>Proceso de Resinas</businessProcess>
        <label>Resinas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Terminales</fullName>
        <active>true</active>
        <businessProcess>Proceso de Terminales Maritimos</businessProcess>
        <label>Terminales Marítimos</label>
    </recordTypes>
</CustomObject>